--- a/module-8/Hackett_Mod8_2.css
+++ b/module-8/Hackett_Mod8_2.css
@@ -94,7 +94,7 @@ body {
     margin-bottom: 30px;
 }
 
-#movies td {
+#movies th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
