--- a/module-8/Hackett_Mod8_2.css
+++ b/module-8/Hackett_Mod8_2.css
@@ -92,18 +92,26 @@ body {
     border-collapse: collapse;
     width: 100%;
     margin-bottom: 30px;
+    
 }
 
-th {
+.movies th {
+    font-weight: 100;
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
+    background-color: darkblue;
+    color: white;
+
+
 }
 
-td {
-    border: 1px;
+.movies td {
+    border-width: 1px;
     border-color: #ddd;
+    border-style: solid;
     padding: 8px;
+  
 }
 
 
